--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@nestjs/graphql": "^12.2.2",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.9.0",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "graphql": "^16.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
