--- a/apps/jobber-auth/project.json
+++ b/apps/jobber-auth/project.json
@@ -31,7 +31,7 @@
       "dependsOn": ["build"],
       "options": {
         "buildTarget": "jobber-auth:build",
-        "runBuildTargetDependencies": false
+        "runBuildTargetDependencies": true
       },
       "configurations": {
         "development": {
