--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/graphql": "^12.2.2",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.9.0",
     "@types/bcryptjs": "^2.4.6",
