--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,10 @@ services:
       - 5433:5432
     environment:
       POSTGRES_PASSWORD: example
+
+  pulsar:
+    image: apachepulsar/pulsar
+    command: >
+      /pulsar/bin/pulsar standalone
+    ports:
+      - 6550:6550
