--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,14 @@ services:
     ports:
       - 5433:5432
     environment:
+      POSTGRES_DB: jobber-auth
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: example
+
 
   pulsar:
     image: apachepulsar/pulsar
     command: >
       /pulsar/bin/pulsar standalone
     ports:
-      - 6550:6550
+      - 6650:6650
