--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "start": "nx run-many --target=serve --projects=jobber-auth,jobber-jobs,jobber-executor --output-style=stream",
     "prepare": "husky",
     "generate-ts-proto": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./types ./proto/*.proto --ts_proto_opt=nestJs=true"
   },
@@ -39,6 +40,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "graphql": "^16.11.0",
+    "graphql-type-json": "^0.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pulsar-client": "^1.14.0",
