--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "fibonacci": "^1.6.12",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
     "passport": "^0.7.0",
