--- a/libs/prisma/package.json
+++ b/libs/prisma/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@jobber/prisma",
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "@prisma/client": "^6.9.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.9.0"
+  }
 }
