--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@auth/prisma": ["apps/auth/src/app/prisma"],
-      "@jobber/graphql": ["libs/nestjs/src/index.ts"],
+      "@jobber/graphql": ["libs/graphql/src/index.ts"],
       "@jobber/grpc": ["libs/grpc/src/index.ts"],
       "@jobber/nestjs": ["libs/nestjs/src/index.ts"],
       "@jobber/prisma": ["libs/prisma/src/index.ts"],
