--- a/package.json
+++ b/package.json
@@ -35,12 +35,20 @@
     "fibonacci": "^1.6.12",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
+    "module-alias": "^2.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pulsar-client": "^1.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "ts-proto": "^1.181.2"
+  },
+  "_moduleAliases": {
+    "@jobber/grpc": "dist/libs/grpc/main",
+    "@jobber/graphql": "dist/libs/graphql/main",
+    "@jobber/pulsar": "dist/libs/pulsar/main",
+    "@jobber/nestjs": "dist/libs/nestjs/main",
+    "@jobber/prisma": "dist/libs/prisma/main"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
