--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx run-many --target=serve --projects=auth,jobs,executor --output-style=stream",
-    "prepare": "husky"
+    "start": "nx run-many --target=serve --projects=auth,jobs,executor --output-style=stream"
   },
   "workspaces": [
     "apps/*",
