--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
     "module-alias": "^2.2.3",
+    "nestjs-pino": "^4.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pino-http": "^10.5.0",
     "pulsar-client": "^1.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -76,6 +78,7 @@
     "jest-environment-node": "^29.7.0",
     "lint-staged": "^16.1.2",
     "nx": "21.1.3",
+    "pino-pretty": "^13.1.1",
     "prettier": "^2.6.2",
     "prisma": "^6.9.0",
     "ts-jest": "^29.1.0",
