--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -2,6 +2,8 @@ FROM node:18-slim AS builder
 
 WORKDIR /workspace
 
+RUN apt-get update && apt-get install -y openssl
+
 COPY package*.json ./
 COPY nx.json ./
 COPY tsconfig*.json ./
@@ -25,6 +27,8 @@ RUN npx nx build auth
 FROM node:18-slim AS runner
 
 WORKDIR /app
+
+RUN apt-get update && apt-get install -y openssl
 
 COPY --from=builder /workspace/package.json ./
 COPY --from=builder /workspace/apps/auth/package.json ./apps/auth/package.json
