68. executor & auth deployment

--- a/charts/jobber/values.yaml
+++ b/charts/jobber/values.yaml
@@ -46,3 +46,20 @@ jobs:
   replicas: 1
   image: "015427871210.dkr.ecr.us-east-1.amazonaws.com/jobber/jobs:latest"
   port: 3001
+
+executor:
+  enabled: true
+  replicas: 1
+  image: "015427871210.dkr.ecr.us-east-1.amazonaws.com/jobber/executor:latest"
+  port: 3002
+
+auth:
+  enabled: true
+  replicas: 1
+  image: "015427871210.dkr.ecr.us-east-1.amazonaws.com/jobber/auth:latest"
+  port:
+    http: 3000
+    grpc: 5000
+  jwt:
+    secret: 4KlCEqD5GgHt34Ep81ezzME6mReaOBbO
+    expirationMs: 28800000
