--- a/libs/prisma/package.json
+++ b/libs/prisma/package.json
@@ -2,9 +2,7 @@
   "name": "@jobber/prisma",
   "version": "0.0.0",
   "dependencies": {
-    "@prisma/client": "^6.9.0"
-  },
-  "devDependencies": {
+    "@prisma/client": "^6.9.0",
     "prisma": "^6.9.0"
   }
 }
