76. file upload finish

--- a/apps/jobs/package.json
+++ b/apps/jobs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@jobber/jobs",
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/multer": "^2.0.0"
+  }
 }
