83. job file data

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx run-many --target=serve --projects=auth,jobs,executor --output-style=stream"
+    "start": "nx run-many --target=serve --projects=auth,jobs,executor,products --parallel 4 --output-style=stream"
   },
   "workspaces": [
     "apps/*",
