--- a/apps/executor/Dockerfile
+++ b/apps/executor/Dockerfile
@@ -11,10 +11,13 @@ COPY eslint.config.mjs ./
 COPY webpack.*.config.js ./
 
 COPY apps/executor ./apps/executor
+COPY libs/grpc ./libs/grpc
 COPY libs/nestjs ./libs/nestjs
 COPY libs/pulsar ./libs/pulsar
 
 RUN npm install
+
+RUN apt-get update && apt-get install -y protobuf-compiler
 
 RUN npx nx build executor
 
@@ -24,6 +27,7 @@ WORKDIR /app
 
 COPY --from=builder /workspace/package.json ./
 COPY --from=builder /workspace/apps/executor/package.json ./apps/executor/package.json
+COPY --from=builder /workspace/libs/grpc/package.json ./libs/grpc/package.json
 COPY --from=builder /workspace/libs/pulsar/package.json ./libs/pulsar/package.json
 COPY --from=builder /workspace/package-lock.json ./
 
