--- a/apps/products/package.json
+++ b/apps/products/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "dependencies": {
     "drizzle-orm": "^0.44.5",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "drizzle-kit": "^0.31.5"
   },
   "devDependencies": {
-    "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.5"
+    "@types/pg": "^8.15.5"
   }
 }
