--- a/charts/jobber/values.yaml
+++ b/charts/jobber/values.yaml
@@ -40,6 +40,12 @@ postgresql:
     username: postgres
     password: postgres
     database: jobber
+  primary:
+    initdb:
+      scripts:
+        create-dbs.sql: |
+          CREATE DATABASE auth;
+          CREATE DATABASE products;
 
 jobs:
   enabled: true
@@ -63,3 +69,11 @@ auth:
   jwt:
     secret: 4KlCEqD5GgHt34Ep81ezzME6mReaOBbO
     expirationMs: "28800000"
+
+products:
+  enabled: true
+  replicas: 1
+  image: "015427871210.dkr.ecr.us-east-1.amazonaws.com/jobber/products:latest"
+  port:
+    http: 3003
+    grpc: 5001
