--- a/charts/jobber/values.yaml
+++ b/charts/jobber/values.yaml
@@ -46,12 +46,15 @@ postgresql:
         create-dbs.sql: |
           CREATE DATABASE auth;
           CREATE DATABASE products;
+          CREATE DATABASE jobs;
 
 jobs:
   enabled: true
   replicas: 1
   image: "015427871210.dkr.ecr.us-east-1.amazonaws.com/jobber/jobs:latest"
-  port: 3001
+  port:
+    http: 3001
+    grpc: 3002
 
 executor:
   enabled: true
