--- a/charts/jobber/values.yaml
+++ b/charts/jobber/values.yaml
@@ -1,6 +1,12 @@
 global:
   imagePullPolicy: Always
 
+ingress:
+  alb: false
+
+persistence:
+  ebs: false
+
 pulsar:
   namespace: pulsar
   namespaceCreate: true
