--- a/charts/jobber/values-aws.yaml
+++ b/charts/jobber/values-aws.yaml
@@ -3,3 +3,26 @@ ingress:
 
 persistence:
   ebs: true
+
+pulsar:
+  global:
+    storageClass: "ebs-sc"
+
+  zookeeper:
+    persistence:
+      storageClass: "ebs-sc"
+    volumes:
+      data:
+        storageClassName: "ebs-sc"
+
+  bookkeeper:
+    volumes:
+      journal:
+        storageClassName: "ebs-sc"
+      ledgers:
+        storageClassName: "ebs-sc"
+
+postgresql:
+  primary:
+    persistence:
+      storageClass: "ebs-sc"
