--- a/charts/jobber/templates/jobs/pvc.yaml
+++ b/charts/jobber/templates/jobs/pvc.yaml
@@ -13,5 +13,5 @@ spec:
     requests:
       storage: 5Gi
   {{- if .Values.persistence.ebs }}
-  storageClassName: ebs-cs
+  storageClassName: ebs-sc
   {{- end }}
